--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -43,15 +43,18 @@ a { color: inherit; text-decoration: none; }
 
 a:hover { color: #4bccff; }
 
-main { padding: 1rem; max-width: 70%; margin: auto; }
+main { padding: 1rem; max-width: 75%; margin: auto; }
 
 .layout { scrollbar-gutter: stable; overflow-y: scroll; max-height: 100vh; scrollbar-width: 5px; }
 .layout::-webkit-scrollbar { max-width: 5px; max-height: 5px; }
 .layout::-webkit-scrollbar-thumb { background-color: #444444; border-radius: 5px; }
 .layout::-webkit-scrollbar-corner { background: rgba(0, 0, 0, 0); }
 
-.layout-content { min-height: calc(100vh - 5.5rem); max-width: 70%; margin: auto; }
+.layout-content { min-height: calc(100vh - 5.5rem); max-width: 75%; margin: auto; }
 
+/* On phones (max width 600px), set max-width to 100% */
+@media (max-width: 600px) { main { padding: 1rem; max-width: 90%; margin: auto; }
+  .layout-content { max-width: 90%; } }
 footer { height: 3rem; font-size: 0.9rem; max-width: 70%; width: 100%; text-align: center; margin: 1rem auto 0.5rem; }
 
 footer a { color: #4bccff; }
